# calculadora_simulacion

./: .gitignore  CHANGELOG.md  README.md  STATUS.md  build-wasm.sh  cabal.project  calculadora-simulacion.cabal  style.css
app/: GlobalTypes.hs  GlobalUpdate.hs  GlobalView.hs  Main.hs  Types.hs  Update.hs  View.hs
app/Automatas/: Congruencial.hs  CongruencialMult.hs  CuadradosMedios.hs  MersenneTwister.hs  MultiplicadorConstante.hs  ProductosMedios.hs  PruebasEstadisticas.hs  Ruleta.hs
app/Funciones/: Aleatorios.hs  Congruenciales.hs  Distribuciones.hs  Estadisticas.hs  NoCongruenciales.hs
app/SubAutomatas/: AnalizadorEstadistico.hs  Distribuciones.hs  InputValidado.hs
app/UI/: Math.hs  Navbar.hs  Table.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
public/: index.html  lanzador.js  style.css.bak  styles.css
ruleta/: Makefile  ruleta.cabal
ruleta/public/: app.wasm  ghc_wasm_jsffi.js  style.css
ruleta/src/: Main.hs  Ruleta.hs
ruleta/static/: index.html  index.js
